<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity"
    android:background="#ffffff">
    <ImageView
        android:id="@+id/shapes"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp"
        android:src="@drawable/shapes2"
        android:layout_marginLeft="-34dp"/>
    <TextView
        android:id="@+id/otp_verific"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="235dp"
        android:layout_centerHorizontal="true"
        android:text="@string/otp_verific"
        android:textAppearance="@style/otp_verific"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"

        />


    <TextView
        android:id="@+id/mobileText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:layout_marginStart="2dp"
        android:textAppearance="@style/enter_the_o"
        android:fontFamily="@font/montserrat"
        android:layout_below="@+id/otp_verific"
        android:text="@string/enter_the_otp_sent_to_91"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout2"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/mobileText">

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode1"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"
            android:backgroundTint="#ff0404"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:focusedByDefault="true"

            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:layout_marginStart="12dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"
            android:backgroundTint="#ff0404"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode3"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginStart="12dp"
            android:textColor="#000000"
            android:backgroundTint="#ff0404"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode4"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"
            android:backgroundTint="#ff0404"
            android:textSize="20sp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"

            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode5"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"
            android:backgroundTint="#ff0404"
            android:textSize="20sp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"

            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode6"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"
            android:backgroundTint="#ff0404"
            android:textSize="20sp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"

            />
    </LinearLayout>


        <TextView
            android:id="@+id/didn_t_rece"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
           android:layout_marginLeft="48dp"
            android:layout_marginTop="60dp"
           android:fontFamily="@font/montserrat"
            android:text="@string/didn_t_rece"
            android:textAppearance="@style/didn_t_rece"
            android:gravity="center_horizontal|top"
            android:layout_below="@+id/linear_layout2"

            />

    <TextView
        android:id="@+id/resendOTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat"
        android:text="Resend OTP"
        android:textColor="#ff0404"
        android:textAppearance="@style/didn_t_rece"
        android:layout_below="@+id/linear_layout2"
        android:layout_toEndOf="@+id/didn_t_rece"
        android:clickable="true"

        android:focusable="true" />

    <Button
        android:id="@+id/verify_button_enabled"
        android:layout_width="265dp"
        android:layout_height="53dp"
        android:layout_below="@id/didn_t_rece"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:background="@drawable/ic_button_enabled"
        android:textStyle="bold"
        android:text="VERIFY"
        android:textAppearance="@style/get_otp"
        android:textColor="#ffffff"
        android:fontFamily="@font/montserrat"
        />

    <Button
        android:id="@+id/verify_button_disabled"
        android:layout_width="265dp"
        android:layout_height="53dp"
        android:layout_below="@id/didn_t_rece"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_button_disabled"
        android:visibility="visible"
        android:textStyle="bold"
        android:text="VERIFY"
        android:textColor="#ffffff"
        android:textAppearance="@style/get_otp"
        android:fontFamily="@font/montserrat"

        />


    <View
        android:id="@+id/ellipse_7_disabled"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="579dp"
        android:background="@drawable/ic_ellipse2"
        android:visibility="visible" />

    <View
        android:id="@+id/ellipse_6_disabled"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="568dp"
        android:background="@drawable/ic_ellipse1"
        android:visibility="visible" />


</RelativeLayout>